--- a/sass/_styles.scss
+++ b/sass/_styles.scss
@@ -41,7 +41,7 @@
 
   .nav-links a,
   .nav-links a:active {
-    color: #f8f8ff;
+    color: #000000;
     text-decoration: none;
     letter-spacing: 3px;
     font-weight: bold;
@@ -162,7 +162,8 @@
   }
 
   .projects-page div img {
-    max-width: 100%;
+    max-width: 100vw;
+    height: auto;
   }
 
   .projects-page h1 {
@@ -182,12 +183,6 @@
 .projects-page .container {
     position: relative;
     width: 100vw;
-  }
-
-  .projects-page .image {
-    display: block;
-    width: 100vw;
-    height: auto;
   }
 
   .projects-page .overlay {
@@ -301,6 +296,11 @@
       overflow-x: hidden;
     }
     
+    .nav-links a,
+    .nav-links a:active {
+      color: #f8f8ff;
+    }
+
     .nav-links {
       position: absolute;
       right: 0px;
@@ -329,7 +329,7 @@
     }
 
     .projects-page .overlay {
-      opacity: 0;
+      opacity: 0.8;
     }
   }
 
